RESOLVED FIXED215849
Animations are invalidating too much
https://bugs.webkit.org/show_bug.cgi?id=215849
Summary Animations are invalidating too much
Antti Koivisto
Reported 2020-08-26 06:29:18 PDT
Use invalidateStyleInternal() instead of invalidateStyle()
Attachments
patch (1.18 KB, patch)
2020-08-26 06:33 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-08-26 06:33:41 PDT
Radar WebKit Bug Importer
Comment 2 2020-08-26 14:28:58 PDT
EWS
Comment 3 2020-08-27 03:21:26 PDT
Committed r266229: <https://trac.webkit.org/changeset/266229> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407294 [details].
Note You need to log in before you can comment on or make changes to this bug.