Cherry-pick r266229. rdar://problem/68161195

Animation are invalidating too much
    https://bugs.webkit.org/show_bug.cgi?id=215849

    Reviewed by Antoine Quint.

    * animation/KeyframeEffect.cpp:
    (WebCore::invalidateElement):

    Changes due to animations can't affect sibling elements so we can use internal invalidation.

    Canonical link: https://commits.webkit.org/228683@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266229 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.12@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@266425 268f45cc-cd09-0410-ab3c-d52691b4dbfc